feat: Add deployment configurations for Railway and Render
- Added railway.json and render.yaml for cloud deployment
- Created comprehensive DEPLOYMENT.md guide
- Added production network config to Hardhat
- Added deploy:production script for contract deployment
- Supports Railway.app and Render.com free tier deployments

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,6 +7,7 @@
     "test": "hardhat test",
     "node": "hardhat node",
     "deploy:local": "hardhat run scripts/deploy.ts --network localhost",
+    "deploy:production": "hardhat run scripts/deploy.ts --network production",
     "compile": "hardhat compile",
     "coverage": "hardhat coverage"
   },
