--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,6 +8,13 @@ server {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "OK";
+        add_header Content-Type text/plain;
+    }
+
     # Handle React Router
     location / {
         try_files $uri $uri/ /index.html;
