--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
@@ -12,13 +12,13 @@ server {
     # Health check endpoint
     location /health {
         access_log off;
-        return 200 "OK";
+        return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
 
     # Handle React Router
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
     }
 
     # Cache static assets
