feat: Auto-deploy contracts on blockchain startup and require blockchain for backend

--- a/contracts/Dockerfile
+++ b/contracts/Dockerfile
@@ -12,8 +12,12 @@ RUN npm install
 # Copy contract files
 COPY . .
 
+# Copy and set up startup script
+COPY start-blockchain.sh /start-blockchain.sh
+RUN chmod +x /start-blockchain.sh
+
 # Expose Hardhat node port
 EXPOSE 8545
 
-# Start Hardhat node
-CMD ["npx", "hardhat", "node", "--hostname", "0.0.0.0"]
+# Start Hardhat node with auto-deployment
+CMD ["/start-blockchain.sh"]
